Fixing Issues : Map Scroll, maps icon overlap

--- a/src/app/chart-view/chart-view.component.scss
+++ b/src/app/chart-view/chart-view.component.scss
@@ -110,6 +110,8 @@
   //   opacity: 0;
   // -webkit-transition: all .5s;
   // }
+  as-split-area {flex: auto !important;}
+  .map{width: 90%;}
  
   .left_nav_icons{width: 80px;
     display: flex;
