--- a/src/app/map-view/map-view.component.scss
+++ b/src/app/map-view/map-view.component.scss
@@ -225,9 +225,9 @@
     color: #ffffff !important;
   }
   #toolbarDiv{
-    position: fixed;
-    right: 32%;
-    top: 36%;
+    position: absolute;
+    right: 15px;
+    top: 32%;
     background: transparent;
   }
   
